# touchscreenlock

./: Cargo.toml  README.md  TouchscreenLock.sln  build.rs
TouchscreenLock/: TouchscreenLock.rc  TouchscreenLock.vcxproj  main.cpp  resource.h
src/: main.rs
